# browser_automation_lib

./: README.md
browser_automation/: Cargo.toml
browser_automation/src/: lib.rs
browser_automation/src/elements/: elements.rs
browser_automation/src/session/: session.rs
browser_automation/src/utils/: utils.rs
