[package]
name = "browser_automation"
version = "0.1.2"
edition = "2021"
authors = ["Harshavardhan harshapalnati@gmail.com"]
description = "A modular browser automation library using Fantoccini."
homepage = "https://github.com/harshapalnati/browser_automation_lib"
repository = "https://github.com/harshapalnati/browser_automation_lib"
license = "MIT"                   # Use an appropriate license


[dependencies]

fantoccini = "0.21"   # For WebDriver-based browser control
serde = { version = "1.0", features = ["derive"] }  # For parsing configuration files
tokio = { version = "1", features = ["full"] }      # For async programming
log = "0.4"                                         # For logging actions
rand = "0.8"   #For random delays
serde_json="1.0"